--- a/thesis.bib
+++ b/thesis.bib
@@ -1480,6 +1480,14 @@
 	howpublished = {arXiv},
 	primaryclass = {cs.DC}
 }
+
+@misc{p4,
+	title = {P4 Language Specification},
+	author = {P4 Language Consortium},
+	year = 2017,
+	howpublished = {\url{https://p4.org/p4-spec/docs/P4-16-v1.1.0-spec.html}}
+}
+
 @inproceedings{surf,
 	title        = {SuRF: Practical Range Query Filtering with Fast Succinct Tries},
 	author       = {Zhang, Huanchen and Lim, Hyeontaek and Leis, Viktor and Andersen, David G. and Kaminsky, Michael and Keeton, Kimberly and Pavlo, Andrew},
@@ -1730,4 +1738,31 @@ location = {<conf-loc>, <city>Koblenz</city>, <country>Germany</country>, </conf
 series = {SOSP '23}
 }
 
+@inproceedings{fairnic,
+author = {Grant, Stewart and Yelam, Anil and Bland, Maxwell and Snoeren, Alex C.},
+title = {SmartNIC Performance Isolation with FairNIC: Programmable Networking for the Cloud},
+year = {2020},
+isbn = {9781450379557},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3387514.3405895},
+doi = {10.1145/3387514.3405895},
+abstract = {Multiple vendors have recently released SmartNICs that provide both special-purpose accelerators and programmable processing cores that allow increasingly sophisticated packet processing tasks to be offloaded from general-purpose CPUs. Indeed, leading data-center operators have designed and deployed SmartNICs at scale to support both network virtualization and application-specific tasks. Unfortunately, cloud providers have not yet opened up the full power of these devices to tenants, as current runtimes do not provide adequate isolation between individual applications running on the SmartNICs themselves.We introduce FairNIC, a system to provide performance isolation between tenants utilizing the full capabilities of a commodity SoC SmartNIC. We implement FairNIC on Cavium LiquidIO 2360s and show that we are able to isolate not only typical packet processing, but also prevent MIPS-core cache pollution and fairly share access to fixed-function hardware accelerators. We use FairNIC to implement NIC-accelerated OVS and key/value store applications and show that they both can cohabitate on a single NIC using the same port, where the performance of each is unimpacted by other tenants. We argue that our results demonstrate the feasibility of sharing SmartNICs among virtual tenants, and motivate the development of appropriate security isolation mechanisms.},
+booktitle = {Proceedings of the Annual Conference of the ACM Special Interest Group on Data Communication on the Applications, Technologies, Architectures, and Protocols for Computer Communication},
+pages = {681–693},
+numpages = {13},
+keywords = {performance isolation, cloud hosting, Network adapters},
+location = {Virtual Event, USA},
+series = {SIGCOMM '20}
+}
 
+@inproceedings {treadmarks,
+author = {Peter Keleher and Alan L. Cox and Sandhya Dwarkadas and Willy Zwaenepoel},
+title = {Tread Marks: Distributed Shared Memory on Standard Workstations and Operating Systems},
+booktitle = {USENIX Winter 1994 Technical Conference (USENIX Winter 1994 Technical Conference)},
+year = {1994},
+address = {San Francisco, CA},
+url = {https://www.usenix.org/conference/usenix-winter-1994-technical-conference/tread-marks-distributed-shared-memory-standard},
+publisher = {USENIX Association},
+month = jan
+}
