writing push to finish a first draft of the intro

--- a/thesis.bib
+++ b/thesis.bib
@@ -64,6 +64,21 @@
 	eprint       = {2207.07688},
 	primaryclass = {cs.OS}
 }
+
+@misc{ec2-offer,
+	title = {Amazon EC2 Instances},
+	author = {Amazon Web Services},
+	howpublished = {https://aws.amazon.com/ec2/instance-types/},
+	year={2024}
+}
+
+@misc{micron-memorywall,
+	title = {Micron’s Perspective on Impact of CXL on DRAM Bit Growth Rate},
+	author = {Micron},
+	howpublished = {https://www.micron.com/content/dam/micron/global/public/products/white-paper/cxl-impact-dram-bit-growth-white-paper.pdf},
+	year={2023},
+}
+
 @inproceedings{aguilera2019designing,
 	title        = {Designing Far Memory Data Structures: Think Outside the Box},
 	author       = {Aguilera, Marcos and Keeton, Kimberly and Novakovic, Stanko and Singhal, Sharad},
