--- a/thesis.tex
+++ b/thesis.tex
@@ -222,7 +222,72 @@ data structures to be easily ported to the disaggregated setting.
 
 % Optional Introduction
 \begin{dissertationintroduction}
-	\todo{Big todo write the diseration introduction}
+
+Modern data center operators are fighting tooth and claw for efficiency. In prior decades due to
+Moors law and Dennard scaling data center operators to simply wait for the next generation of
+hardware to arrive for higher performance at lower monetary and energy costs. Both trends have
+slowed down dramatically -- CPU clock speeds and memory density, while still improving, have
+comparatively stagnated. The result is new technologies to fill the gap, rather than frequency
+scaling CPU's are scaling out and have become monstrously parallel, and common performance critical
+applications are being offloaded to accelerators like GPU's, TPU's, DPU's, SmartNICs and FPGA's.
+Memory is now increasingly tiered with the advent of NVM, persistent memory, and far memory. 
+
+What should a data center server look like? 20 years ago an operator may have argued for the
+simplicity of homogeneity, arguing for a carefully picked set of price and performance optimal
+components for a few thousand servers, perhaps with some skew for storage servers. Today that same
+operator probably could not name every kind of server in their data center. At the time of writing
+EC2 has 84 listed instance types~\cite{ec2-offer} for their customers to design their services. The
+trend is clear, in search of efficiency data center and server design is increasingly heterogeneous
+with servers being designed for specific applications and workloads.
+
+DRAM in particular has quickly become a precious resource in the data center. Main memory capacity,
+while growing has not kept up with CPU core counts. The result is that per-core memory capacity is
+less than 10 years ago~\cite{micron-memorywall}. New memory tiers like NVM and persistent memory
+have been introduced to help alleviate memory pressure from applications, but the composition of
+these memory tiers, and the software to manage them are still undecided.
+
+Resource disaggregation is a new architectural paradigm for data center resources aimed at improving
+efficiency and managing increased heterogeneity. In the disaggregated model a servers resources do
+not monolithic reside in a 1, 2, or 4U server form factor, instead each resource i.e compute,
+memory, storage is dedicated to a single machine and interconnected via a fast network. Servers are
+composed dynamically from these resources which enables them to be provisioned for their exact
+purpose. This model enables resource pooling and sharing which in turn leads to higher efficiency. 
+
+The benefits of pooling are clear when examining a simple bin packing problem. Consider 2 servers
+both provisioned with 4GB of DRAM and 3 jobs each of which requires 2.5GB of memory. In a monolithic
+design a scheduler can only place one job per machine or risk swapping to disk. In a disaggregated
+model the 4GB of memory would be placed in an 8GB pool which could easily subdivided into 3 2.5GB
+partitions. In the monolithic case the unused memory is stranded, pooling reclaims stranded memory.
+More concretely at datacenter levels practitioners have to provision their servers for the sum of
+peak demand, when resources are pooled they can be provisioned for the peak of the sum of demand
+which can be significantly lower~\cite{supernic, dsnf}.
+
+The enabling technology for disaggregation is a fast network. Network capacities continue to grow,
+current commodity NICs offer 400Gbps of bandwidth, and Terabit ethernet is on the horizon.
+Simultaneously networks are increasingly programmable with SmartNICs, FPGAs, and programmable
+switches offering line rate processing of user defined functions. These technologies enable the
+construction of fast, low latency, and high bandwidth networks which are essential for
+disaggregation. These two trends have lead to intra rack latencies of 1-2us and network bandwidths
+on the same order as memory bandwidths with the ability to inspect, cache, and modify packets in
+flight at line rate. Together they lay the foundation for rack-scale disaggregated computers.
+
+If disaggregation were easy it would have been done already, and it some cases it has. Storage, we
+describe more in the background section has seen widespread disaggregation largely because the cost
+of a network round trip and transmission time is low in comparison to the cost of a disk access. In
+the case of memory disaggregation is hard because the cost of a network round trip is an order of
+magnitude higher than a local memory access, effectively making remote memory a separate tier from
+local DRAM in terms of performance. This performance gap makes realizing remote memory difficult,
+and especially so for shared data structures where the cost of coherence between remote cores is
+both required and expensive, and handing failures between remote memory and CPU's is a first class
+concern.
+
+This thesis explores the design of shared data structures in disaggregated memory systems.  I
+present the design and implementation of two systems designed for disaggregated memory and with
+sharing and contention reduction as a core concern. The first system {\sword} is a middlebox
+approach for removing contention from shared data structures. The high level insight behind {\sword}
+is to leverage the fact that at rack-scale TORs have a serialized view of traffic to and from
+servers. Using this idea {\sword} caches data structure state on a programmable switch 
+
 \end{dissertationintroduction}
 
 \chapter{Background}
