updates to the introduction

--- a/thesis.bib
+++ b/thesis.bib
@@ -65,6 +65,14 @@
 	primaryclass = {cs.OS}
 }
 
+
+@misc {nitro,
+	title = {AWS Nitro System},
+	author = {Amazon Web Services},
+	howpublished = {https://aws.amazon.com/ec2/nitro/},
+	year = {2024}
+}
+
 @misc{ec2-offer,
 	title = {Amazon EC2 Instances},
 	author = {Amazon Web Services},
