--- a/thesis.bib
+++ b/thesis.bib
@@ -460,6 +460,7 @@
 	isbn         = {978-1-939133-33-5},
 	url          = {https://www.usenix.org/conference/nsdi23/presentation/bansal}
 }
+
 @inproceedings{eris,
 	title        = {Eris: Coordination-Free Consistent Transactions using Network Multi-Sequencing},
 	author       = {Li, Jialin and Michael, Ellis and Ports, Dan R. K.},
@@ -467,11 +468,6 @@
 	month        = {October},
 	booktitle    = {Proceedings of the 26th ACM Symposium on Operating Systems Principles (SOSP '17)},
 	url          = {https://www.microsoft.com/en-us/research/publication/eris-coordination-free-consistent-transactions-using-network-multi-sequencing/},
-	abstract     = {
-		Distributed storage systems aim to provide strong consistency and isolation guarantees on an architecture that is partitioned across multiple shards for scalability and replicated for fault-tolerance. Traditionally, achieving all of these goals has required an expensive combination of atomic commitment and replication protocols -- introducing extensive coordination overhead. Our system, Eris, takes a very different approach. It moves a core piece of concurrency control functionality, which we term multi-sequencing, into the datacenter network itself. This network primitive takes on the responsibility for consistently ordering transactions, and a new lightweight transaction protocol ensures atomicity.
-
-		The end result is that Eris avoids both replication and transaction coordination overhead: we show that it can process a large class of distributed transactions in a single round-trip from the client to the storage system without any explicit coordination between shards or replicas. It provides atomicity, consistency, and fault-tolerance with less than 10% overhead -- achieving throughput 4.5--35x higher and latency 72--80% lower than a conventional design on standard benchmarks.
-	},
 	edition      = {Proceedings of the 26th ACM Symposium on Operating Systems Principles (SOSP '17)}
 }
 @inproceedings{erpc,
@@ -1788,4 +1784,41 @@ address = {San Francisco, CA},
 url = {https://www.usenix.org/conference/usenix-winter-1994-technical-conference/tread-marks-distributed-shared-memory-standard},
 publisher = {USENIX Association},
 month = jan
+}
+
+
+@inproceedings{cxl-demyst, series={MICRO ’23},
+   title={Demystifying CXL Memory with Genuine CXL-Ready Systems and Devices},
+   url={http://dx.doi.org/10.1145/3613424.3614256},
+   DOI={10.1145/3613424.3614256},
+   booktitle={56th Annual IEEE/ACM International Symposium on Microarchitecture},
+   publisher={ACM},
+   author={Sun, Yan and Yuan, Yifan and Yu, Zeduo and Kuper, Reese and Song, Chihun and Huang, Jinghan and Ji, Houxiang and Agarwal, Siddharth and Lou, Jiaqi and Jeong, Ipoom and Wang, Ren and Ahn, Jung Ho and Xu, Tianyin and Kim, Nam Sung},
+   year={2023},
+   month=oct, collection={MICRO ’23} }
+
+@inproceedings{tpp,
+author = {Maruf, Hasan Al and Wang, Hao and Dhanotia, Abhishek and Weiner, Johannes and Agarwal, Niket and Bhattacharya, Pallab and Petersen, Chris and Chowdhury, Mosharaf and Kanaujia, Shobhit and Chauhan, Prakash},
+title = {TPP: Transparent Page Placement for CXL-Enabled Tiered-Memory},
+year = {2023},
+isbn = {9781450399180},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3582016.3582063},
+doi = {10.1145/3582016.3582063},
+booktitle = {Proceedings of the 28th ACM International Conference on Architectural Support for Programming Languages and Operating Systems, Volume 3},
+pages = {742–755},
+numpages = {14},
+keywords = {CXL-Memory, Datacenters, Heterogeneous System, Memory Management, Operating Systems, Tiered-Memory},
+location = {<conf-loc>, <city>Vancouver</city>, <state>BC</state>, <country>Canada</country>, </conf-loc>},
+series = {ASPLOS 2023}
+}
+
+@inproceedings{pond,
+author = {Li, Huaicheng and Berger, Daniel S. and Novakovic, Stanko and Hsu, Lisa and Ernst, Dan and Zardoshti, Pantea and Shah, Monish and Rajadnya, Samir and Lee, Scott and Agarwal, Ishwar and Hill, Mark D. and Fontoura, Marcus and Bianchini, Ricardo},
+title = {Pond: CXL-Based Memory Pooling Systems for Cloud Platforms},
+organization = {ACM},
+booktitle = {Proceedings of the International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS)},
+year = {2023},
+month = {March},
 }
